MonetDB5/src/mal/Tests/tst105a.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## check classification of functions in the proper module
#
#module bat;
#command new(h:any::1,t:any::2):bat[any::1,any::2]= GDKbatnew;
!ERROR: address of 'GDKbatnew' not found
command Admin.new(h:any::1,t:any::2):bat[any::1,any::2] = GDKbatnew; #0  dynamic (new:bat[any::1,any::2])<-(h:any::1)(t:any::2)
#
#b:= bat.new(str,int);
function Admin.main():int; #0  unknown (main:int)
    b := bat.new(str,int); #1  unknown (b:any)<-(str:str)(int:int)
end main; #2  unknown 
>